--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "outDir": "dist",
     "esModuleInterop": true, 
     "skipLibCheck": true,    
+    "noImplicitAny": false,
     "forceConsistentCasingInFileNames": true
   }
 }
